# rofi-unicode

./: .gitignore  Cargo.toml  TODO.md  run.sh
.cargo/: config.toml
default_lists/unicode/: all.ron
dev/: Cargo.toml
dev/src/: main.rs
dev/src/generate/: emoji.rs  mod.rs  serde_ucd.rs  ucd.rs
dev/src/generate_unicode/: mod.rs
dev/src/unicode/: de_ucd.rs  mod.rs
src/: config.rs  lib.rs
