[package]
name = "rofi-unicode"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.56"
rofi-mode = { git = "https://github.com/SabrinaJewson/rofi-mode.rs" }
ron = "0.7.0"
pango = { version = "0.15.10", features = ["v1_50"] }
serde = { version = "1.0.136", features = ["derive"] }

[lib]
crate-type = ["cdylib"]
