[package]
name = "rofi-unicode"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.56"
pango = { version = "0.19.2", features = ["v1_50"] }
rofi-mode = "0.4.1"
ron = "0.8.1"
serde = { version = "1.0.136", features = ["derive"] }

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["dev"]
